--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,7 +307,7 @@ body {
   justify-content: center;
   padding: 40px;
   height: 550px;
-  background: url(/assets/images/image.png) center/cover no-repeat,
+  background: url(/assets/images/why.png) center/cover no-repeat,
   linear-gradient(135deg, #2AA7B5 , #01539D);
   
   padding:30px 11% 50px 9%;
@@ -366,7 +366,7 @@ body {
 }
 
 .features-section h2 {
-  font-size: 28px;
+  font-size: 40px;
   color: #01539D;
   margin-bottom: 40px;
 }
@@ -458,6 +458,58 @@ body {
   width: 154px;
   height: 153px;
 }
+
+.review-container{
+  padding: 40px 9% 50px 9%;
+  text-align: center;
+  background:  url(/assets/images/image.png) center/cover no-repeat;
+  background-color: #F5F9FD;
+  height: 550px;
+
+}
+
+.reviews-head h1{
+  color: #01539D;
+  font-size: 45px;
+  margin-bottom: 0;
+}
+
+.reviews-head{
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.review-card {
+  text-align: start;
+  background-color: #ffffff;
+  border-radius: 15px;
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin: 20px;
+  
+  width: 330px;
+  height: 300px;
+
+}
+
+.review-text {
+  font-size: 18px;
+  color: #333;
+  margin-bottom: 15px;
+  line-height: 1.8;
+  
+}
+
+.review-author h4 {
+  font-size: 18px;
+  align-items: flex-start;
+  color: black;
+}
+
+.reviews{
+  display: flex;
+}
+
 
 
 
